恢复搜索功能

--- a/_config.yml
+++ b/_config.yml
@@ -85,3 +85,9 @@ theme: raytaylorism
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type:
+
+# Plugin: hexo-generator-search
+search:
+  path: search.xml
+  field: all
+  content: true
