--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://raytaylorlin.github.io
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :title/
 permalink_defaults:
 
 # Directory
@@ -84,7 +84,8 @@ theme: raytaylorism
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/raytaylorlin/raytaylorlin.github.io.git
 
 # Plugin: hexo-generator-search
 search:
